self-hosted-k8s.yaml
Parameters:
  LabSSHKey:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Choose an existing keypair to use to SSH into Lab nodes.
  
  NodeInstanceType:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.medium
    Description: Choose an EC2 instance type for Lab nodes.

Resources:
  LabVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: 'true'
      EnableDnsSupport: 'true'
      InstanceTenancy: default
      Tags: 
        - Key: env
          Value: lab
        - Key: controller
          Value: CloudFormation

  LabS3GatewayEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: '*'
            Action:
              - 's3:*'
            Resource:
              - 'arn:aws:s3:::*'
      ServiceName: com.amazonaws.us-east-1.s3
      VpcId: 
        Ref: LabVPC

  LabPublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: LabVPC
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select [0, !GetAZs us-east-1]
      Tags:
      - Key: env
        Value: lab
      - Key: controller
        Value: CloudFormation

  LabPublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: LabVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [1, !GetAZs us-east-1]
      Tags:
      - Key: env
        Value: lab
      - Key: controller
        Value: CloudFormation

  LabInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: env
        Value: lab
      - Key: controller
        Value: CloudFormation

  LabAttachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: LabVPC
      InternetGatewayId:
        Ref: LabInternetGateway

  LabRouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId:
        Ref: LabVPC
      Tags:
      - Key: env
        Value: lab
      - Key: controller
        Value: CloudFormation

  LabRouteToInternetGateway:
    Type: AWS::EC2::Route
    Properties: 
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: 
        Ref: LabInternetGateway
      RouteTableId:
        Ref: LabRouteTable

  LabPublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: LabPublicSubnetA
      RouteTableId:
        Ref: LabRouteTable

  LabPublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: LabPublicSubnetB
      RouteTableId:
        Ref: LabRouteTable

  LabSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Lab Environment
      VpcId:
        Ref: LabVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 204.48.37.221/32
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 76.100.181.129/32
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  LabNode1: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0715c1897453cabd1
      InstanceType: 
        Ref: NodeInstanceType
      KeyName: 
        Ref: LabSSHKey
      NetworkInterfaces: 
        - AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          GroupSet: 
            - Ref: LabSecurityGroup
          SubnetId: 
            Ref: LabPublicSubnetA
      Tags:
        - Key: env
          Value: lab
        - Key: controller
          Value: CloudFormation
        - Key: node
          Value: 1

  LabNode2: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0715c1897453cabd1
      InstanceType: 
        Ref: NodeInstanceType
      KeyName: 
        Ref: LabSSHKey
      NetworkInterfaces: 
        - AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          GroupSet: 
            - Ref: LabSecurityGroup
          SubnetId: 
            Ref: LabPublicSubnetA
      Tags:
        - Key: env
          Value: lab
        - Key: controller
          Value: CloudFormation
        - Key: node
          Value: 2

  LabNode3: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0715c1897453cabd1
      InstanceType: 
        Ref: NodeInstanceType
      KeyName: 
        Ref: LabSSHKey
      NetworkInterfaces: 
        - AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          GroupSet: 
            - Ref: LabSecurityGroup
          SubnetId: 
            Ref: LabPublicSubnetB
      Tags:
        - Key: env
          Value: lab
        - Key: controller
          Value: CloudFormation
        - Key: node
          Value: 3

  LabNode4: 
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: ami-0715c1897453cabd1
      InstanceType: 
        Ref: NodeInstanceType
      KeyName: 
        Ref: LabSSHKey
      NetworkInterfaces: 
        - AssociatePublicIpAddress: 'true'
          DeviceIndex: '0'
          GroupSet: 
            - Ref: LabSecurityGroup
          SubnetId: 
            Ref: LabPublicSubnetB
      Tags:
        - Key: env
          Value: lab
        - Key: controller
          Value: CloudFormation
        - Key: node
          Value: 4

Outputs:
  LabSSHKey:
    Description: Existing keypair to use to SSH into Lab nodes.
    Value:
      Ref: LabSSHKey
